# agentic-predictor

./: LICENSE  README.md  index.html  mv_data_construction.ipynb  pyproject.toml  run_predictor.py
agent_predictor/: convert_dataset_mvgnn.py  empty_workflow.py  evaluate_mvgnn.py  pgy_dataset.py  predictor.py  train_mvgnn.py
agent_predictor/operator_files/: AnswerGenerate.py  Custom.py  CustomCodeGenerate.py  Programmer.py  ScEnsemble.py  ScEnsembleExt.py  Test.py
utils/: __init__.py  configs.py  file_io.py  operator.json
