[project]
name = "agent-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.14",
    "astunparse>=1.6.3",
    "datasets>=3.5.0",
    "evaluate>=0.4.3",
    "dvc>=3.59.1",
    "google-search-results>=2.4.2",
    "ipywidgets>=8.1.5",
    "langchain-community>=0.3.21",
    "numpy==1.26.4",
    "openai>=1.71.0",
    "openai-agents>=0.0.9",
    "peft>=0.15.2",
    "pillow>=11.1.0",
    "pylatexenc>=2.10",
    "pymupdf>=1.25.5",
    "scipy>=1.15.2",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.5",
    "sympy>=1.13.1",
    "transformers>=4.51.1",
    "tree-sitter<0.24",
    "tree-sitter-python>=0.23.6",
    "ujson>=5.10.0",
    "jinja2>=3.1.6",
    "nltk>=3.9.1",
    "pandas==2.1.1",
    "pipreqs>=0.5.0",
    "rouge-score>=0.1.2",
    "tenacity==8.2.3",
    "together>=1.5.5",
    "mpmath>=1.3.0",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "bitsandbytes>=0.45.5",
    "matplotlib>=3.10.1",
    "gradio>=5.27.0",
    "python-docx==0.8.11",
    "anthropic>=0.50.0",
    "tiktoken>=0.7",
    "loguru>=0.7.3",
    "google-api-core>=2.24.2",
    "google-ai-generativelanguage>=0.6.15",
    "google-auth>=2.40.1",
    "google-generativeai>=0.8.5",
    "googleapis-common-protos>=1.70.0",
    "chardet>=5.2.0",
    "zhipuai>=2.1.5.20250421",
    "spark-ai-python>=0.4.5",
    "qianfan>=0.4.12.3",
    "dashscope>=1.23.2",
    "boto3>=1.38.10",
    "volcengine-python-sdk>=2.0.1",
    "gitignore-parser>=0.1.12",
    "pytest-playwright>=0.7.0",
    "imap-tools>=1.10.0",
    "nest-asyncio>=1.6.0",
    "jsonlines>=4.0.0",
    "networkx>=3.4.2",
    "einops>=0.8.1",
    "performer-pytorch>=1.1.4",
    "umap-learn>=0.5.7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
